--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,18 +270,12 @@ END Header Area
   display: flex;
   align-items: center;
   height: 800px;
-  background: #5d12f8;
+  background: #33b7b7f7;
   padding-top: 80px;
-}
-
-.slider-img {
 }
 
 .slider-img img {
   max-height: 100%;
-}
-
-.slider-inner {
 }
 
 .slider-inner h2 {
