--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,7 +270,7 @@ END Header Area
   display: flex;
   align-items: center;
   height: 800px;
-  background: #33b7b7f7;
+  background: #33b7b7;
   padding-top: 80px;
 }
 
