Background image changed

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,6 +6,6 @@
   display: flex;
   align-items: center;
   height: 800px;
-  background: #33b7b7;
+  background-color: #33b7b7f7;
   padding-top: 80px;
 }
